# sim-plugin-workbench

./: .gitignore  CHANGELOG.md  LICENSE-NOTICE.md  README.md  pyproject.toml
.github/workflows/: publish-wheel.yml  release.yml
fixtures/: non_workbench_py.py  workbench_bad_syntax.wbjn  workbench_good.wbjn  workbench_no_marker.wbjn  workbench_py_good.py  workbench_static_structural.wbjn  workbench_version_check.wbjn
src/sim_plugin_workbench/: __init__.py  compatibility.yaml  driver.py
src/sim_plugin_workbench/_skills/workbench/: SKILL.md
src/sim_plugin_workbench/_skills/workbench/base/: known_issues.md
src/sim_plugin_workbench/_skills/workbench/base/examples/: cyclic_symmetry_analysis.md  pymechanical_integration.md
src/sim_plugin_workbench/_skills/workbench/base/reference/: pyworkbench_api.md  sub_solver_integration.md  system_templates.md
src/sim_plugin_workbench/_skills/workbench/base/snippets/: 01_smoke_test.py
src/sim_plugin_workbench/_skills/workbench/base/workflows/: debug_failed_exec.md  mechanical_handoff.md  project_review_loop.md
src/sim_plugin_workbench/_skills/workbench/base/workflows/static_structural/: walk_workflow.py
src/sim_plugin_workbench/_skills/workbench/tests/: test_example_patterns.py  test_orchestration.py  test_static_structural_workflow.py
tests/: test_protocol.py  test_wheel_contents.py  test_workbench_driver.py  test_workbench_integration.py
tests/execution/: run_wb_example_visual.py  run_wb_real_solve.py  update_geometry_for_checkmark.py  workbench_mechanical_handoff_smoke.py
